--- a/package.json
+++ b/package.json
@@ -1,48 +1,58 @@
 {
-  "name": "@next-model/core",
-  "version": "1.0.0-alpha.19",
-  "description": "Rails like models using TypeScript/ES6 and Decorators.",
+  "name": "@nextcode/pg-model",
+  "version": "1.0.0-alpha.0",
+  "description": "Postgres model layer package with zero dependencies",
+  "keywords": [
+    "model",
+    "database",
+    "model layer",
+    "pg",
+    "postgres",
+    "typescript",
+    "jest",
+    "node",
+    "nodejs"
+  ],
   "author": "Tamino Martinius <dev@zaku.eu>",
   "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "jsnext:main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "jsnext:main": "./dist/index.mjs",
   "typings": "./dist/index.d.ts",
   "license": "MIT",
   "files": [
-    "dist/*"
+    "dist/*",
+    "bin/*"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/tamino-martinius/node-next-model.git"
+    "url": "https://github.com/tamino-martinius/node-pg-model.git"
   },
   "engines": {
-    "node": ">=6.10"
+    "node": ">=6.14.0"
   },
   "scripts": {
-    "coverage": "rm -rf coverage* && jest --coverage",
-    "test": "jest",
+    "coverage": "rm -rf coverage* && jest --coverage --maxWorkers=1",
+    "test": "jest --maxWorkers=1",
     "watch": "tsc -w",
     "ci": "npm run coverage && codecov",
-    "compile": "rm -rf dist/* && tsc",
+    "compile": "rm -rf dist/* && tsc && tsc-mjs --sourceMap --declaration false --target esnext --module esnext --mjs",
     "preversion": "npm run compile && git add ."
   },
-  "dependencies": {
-    "pluralize": "^7.0.0"
-  },
   "devDependencies": {
-    "@types/faker": "^4.1.2",
-    "@types/jest": "^23.3.0",
-    "@types/node": "^10.5.2",
-    "@types/pluralize": "0.0.29",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "codecov": "^3.0.4",
-    "faker": "^4.1.0",
-    "jest": "^23.4.1",
-    "request": "^2.87.0",
-    "ts-jest": "^23.0.1",
+    "@types/jest": "^23.3.2",
+    "@types/node": "^10.10.0",
+    "@types/pg": "^7.4.10",
+    "codecov": "^3.1.0",
+    "jest": "^23.6.0",
+    "pg": "^7.4.3",
+    "ts-jest": "^23.1.4",
+    "ts-mjs": "^3.1.0",
     "tslint": "^5.11.0",
-    "tslint-config-airbnb": "^5.9.2",
-    "typescript": "^2.9.2"
+    "tslint-config-airbnb": "^5.11.0",
+    "typescript": "^3.0.3"
+  },
+  "peerDependencies": {
+    "pg": "^7.4.3"
   },
   "jest": {
     "transform": {
@@ -51,9 +61,13 @@
     "testRegex": "\\.(test|spec)\\.ts$",
     "moduleFileExtensions": [
       "ts",
-      "tsx",
-      "js",
-      "json"
+      "js"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.ts",
+      "!src/__benchmark__/**",
+      "!src/__tests__/**",
+      "!src/__mocks__/**"
     ]
   }
 }
